UPDATE: added links to excursions by click on a title in the calendar

--- a/app/templates/calendar.html
+++ b/app/templates/calendar.html
@@ -65,6 +65,7 @@
                         title: ex.title,
                         start: new Date(start[0], start[1]-1, start[2], start[3], start[4]),
                         end: new Date(stop[0], stop[1]-1, stop[2], stop[3], stop[4]),
+                        url: '../schedule/get_excursion/' + ex.id,
                         backgroundColor: '#f39c12', //yellow
                         borderColor: '#f39c12' //yellow
                     },
