UPDATE: AJAX in Application, Organizator Table

--- a/app/templates/guides_statistics.html
+++ b/app/templates/guides_statistics.html
@@ -112,7 +112,7 @@
             pointStrokeColor: 'rgba(60,141,188,1)',
             pointHighlightFill: '#fff',
             pointHighlightStroke: 'rgba(60,141,188,1)',
-            data: [rest_data['guide_statistics'][d]['facilities']['LRB'], rest_data['guide_statistics'][d]['facilities']['LIT'], rest_data['guide_statistics'][d]['facilities']['LHEP'], rest_data['guide_statistics'][d]['facilities']['FLNR']]
+            data: [rest_data['guide_statistics'][d]['facilities_sorted'][all_facilities[0]], rest_data['guide_statistics'][d]['facilities_sorted'][all_facilities[1]], rest_data['guide_statistics'][d]['facilities_sorted'][all_facilities[2]], rest_data['guide_statistics'][d]['facilities_sorted'][all_facilities[3]]]
           },
         )
     }
