--- a/app/templates/calendar.html
+++ b/app/templates/calendar.html
@@ -90,6 +90,7 @@
                 editable: false,
                 droppable: false, // this allows things to be dropped onto the calendar !!!
                 weekends: true,
+                firstDay: 1,
                 drop: function (date, allDay) { // this function is called when something is dropped
 
                     // retrieve the dropped element's stored Event Object
