--- a/app/templates/excursion_form.html
+++ b/app/templates/excursion_form.html
@@ -4,66 +4,77 @@
 {% load tz %}
 
 <section class="content-header">
-	<h4><i class="fas fa-edit"></i> <b>Send a new request for the organization of excursion</b></h4>
+	<h4></h4>
 </section>
 
-<form id="application_form" class="card" style="padding-left: 1%; padding-right: 1%;">
-	{% csrf_token %}
-	<div class="row">
-		<div class="col">
-			{{ form.facility|as_crispy_field }}
+<section class="col-lg-12 col-xs-12 connectedSortable ui-sortable">
+    <!-- Custom tabs (Charts with tabs)-->
+    <div class="card">
+        <div class="card-header ui-sortable-handle">
+            <h3 class="card-title">
+              <i class="fas fa-edit mr-1"></i>
+              Send a new request for the organization of excursion
+            </h3>
+        </div><!-- /.card-header -->
+        <div class="card-body">
+			<form id="application_form" style="padding-left: 1%; padding-right: 1%;">
+				{% csrf_token %}
+				<div class="row">
+					<div class="col">
+						{{ form.facility|as_crispy_field }}
+					</div>
+					<div class="col">
+						<label for="id_id_facility" class="col-form-label  requiredField">
+							Select areas:<span class="asteriskField">*</span>
+						</label>
+						{{ form.areas|safe }}
+					</div>
+					<div class="col align-self-center">
+						<label id="id_incharge"></label><br>
+					</div>
+					<div class="col">
+						{{ form.guide|as_crispy_field }}
+					</div>
+				</div>
+				<div class="row">
+					<div class="col">
+						{{ form.event|as_crispy_field }}
+					</div>
+				</div>
+				<div class="row">
+					<div class="col">
+						{{ form.date|as_crispy_field }}
+					</div>
+					<div class="col">
+						<div class="input-group clockpicker" data-placement="bottom" data-align="top" data-autoclose="true">
+							{{ form.start_time|as_crispy_field }}
+						</div>
+					</div>
+					<div class="col">
+						<div class="input-group clockpicker" data-placement="bottom" data-align="top" data-autoclose="true">
+							{{ form.stop_time|as_crispy_field }}
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col">
+						{{ form.language|as_crispy_field }}
+					</div>
+				</div>
+				<div class="row">
+					<div class="col">
+						{{ form.target_audience|as_crispy_field }}
+					</div>
+				</div>
+				<div class="row">
+					<div class="col">
+						{{ form.participants|as_crispy_field }}
+					</div>
+				</div>
+				<input type="submit" style="display: none;" />
+			</form>
+			<button id="bt_change" class="btn btn-block btn-warning" data-toggle="modal" data-target="#myModal">SEND</button>
 		</div>
-		<div class="col">
-			<label for="id_id_facility" class="col-form-label  requiredField">
-				Select areas:<span class="asteriskField">*</span>
-			</label>
-			{{ form.areas|safe }}
-		</div>
-		<div class="col align-self-center">
-			<label id="id_incharge"></label><br>
-		</div>
-		<div class="col">
-			{{ form.guide|as_crispy_field }}
-		</div>
-	</div>
-	<div class="row">
-		<div class="col">
-			{{ form.event|as_crispy_field }}
-		</div>
-	</div>
-	<div class="row">
-		<div class="col">
-			{{ form.date|as_crispy_field }}
-		</div>
-		<div class="col">
-			<div class="input-group clockpicker" data-placement="bottom" data-align="top" data-autoclose="true">
-				{{ form.start_time|as_crispy_field }}
-			</div>
-		</div>
-		<div class="col">
-			<div class="input-group clockpicker" data-placement="bottom" data-align="top" data-autoclose="true">
-				{{ form.stop_time|as_crispy_field }}
-			</div>
-		</div>
-	</div>
-	<div class="row">
-		<div class="col">
-			{{ form.language|as_crispy_field }}
-		</div>
-	</div>
-	<div class="row">
-		<div class="col">
-			{{ form.target_audience|as_crispy_field }}
-		</div>
-	</div>
-	<div class="row">
-		<div class="col">
-			{{ form.participants|as_crispy_field }}
-		</div>
-	</div>
-	<input type="submit" style="display: none;" />
-</form>
-<button id="bt_change" class="btn btn-block btn-warning" data-toggle="modal" data-target="#myModal">SEND</button>
 
 <!-- MODAL FOR CONFIRMATION -->
 <div class="modal fade" id="myModal" role="dialog">
