--- a/app/templates/excursion_info.html
+++ b/app/templates/excursion_info.html
@@ -8,58 +8,70 @@
 {% now "H:i" as current_time %}
 
 <section class="content-header">
-	<h4><i class="fas fa-eye"></i> <b>View application</b></h4>
+	<h4></h4>
 </section><br>
 
-<label id="changefield_info" style="padding:5px 40px; background-color: #f0ad4e;"><i
-		class="fas fa-exclamation-circle"></i> To change some field just enter a new value and click CHANGE
-	EXCURSION</label>
+<section class="col-lg-12 col-xs-12 connectedSortable ui-sortable">
+    <!-- Custom tabs (Charts with tabs)-->
+    <div class="card">
+        <div class="card-header ui-sortable-handle" style="cursor: move;">
+            <h3 class="card-title">
+              <i class="fas fa-eye mr-1"></i>
+              Excursion Info
+            </h3>
+            <!-- Top buttons for choosing my excursions or all -->
+            <div class="card-tools">
+                <div class="btn-group">
+                    <label id="changefield_info" style="padding:5px 40px; background-color: #f0ad4e;"><i
+						class="fas fa-exclamation-circle"></i> To change some field just enter a new value and click CHANGE
+					EXCURSION</label>
+                </div>
+            </div> 
+        </div><!-- /.card-header -->
+        <div class="card-body">
+			<div id="formDiv">
+				<form id="myForm" action="{% url 'app:change_excursion' excursion.id %}" method="post">
+					{% csrf_token %}
+					<table class="table">
+						<tr id="row1">
+							<th id="confirm_held_info" style="border-top: none;"></th>
+							<th colspan="3" style="border-top: none;">{{ form.facility|as_crispy_field }}</th>
+							<th style="border-top: none;">
+								<label for="id_id_facility" class="col-form-label  requiredField">
+									Select areas:<span class="asteriskField">*</span>
+								</label>
+								{{ form.areas|safe }}
+			</div>
 
-<div id="formDiv">
-	<form style="margin-top: 15px;" id="myForm" action="{% url 'app:change_excursion' excursion.id %}" method="post">
-		{% csrf_token %}
-		<table class="table card">
-			<tr id="row1">
-				<th id="confirm_held_info"></th>
-				<th colspan="3">{{ form.facility|as_crispy_field }}</th>
-				<th>
-					<label for="id_id_facility" class="col-form-label  requiredField">
-						Select areas:<span class="asteriskField">*</span>
-					</label>
-					{{ form.areas|safe }}
-</div>
-</th>
-</tr>
+			<tr id="row2">
+				<th colspan="2">{{ form.organizator|as_crispy_field }}</th>
+				<th>{{ form.guide|as_crispy_field }}</th>
+				<th>{{ form.incharge|as_crispy_field }}</th>
+				<th>{{ form.event|as_crispy_field }}</th>
+				<th>{{ form.date|as_crispy_field }}</th>
+			</tr>
 
-<tr id="row2">
-	<th colspan="2">{{ form.organizator|as_crispy_field }}</th>
-	<th>{{ form.guide|as_crispy_field }}</th>
-	<th>{{ form.incharge|as_crispy_field }}</th>
-	<th>{{ form.event|as_crispy_field }}</th>
-	<th>{{ form.date|as_crispy_field }}</th>
-</tr>
+			<tr id="row3">
+				<th colspan="2" class="clockpicker" data-placement="bottom" data-align="top" data-autoclose="true">
+					{{ form.start_time|as_crispy_field }}</th>
+				<th class="clockpicker" data-placement="bottom" data-align="top" data-autoclose="true">
+					{{ form.stop_time|as_crispy_field }}</th>
+				<th>{{ form.language|as_crispy_field }}</th>
+				<th>{{ form.target_audience|as_crispy_field }}</th>
+				<th>{{ form.participants|as_crispy_field }}</th>
+			</tr>
+			</table>
+			<input type="submit" style="display: none;" />
+			</form>
 
-<tr id="row3">
-	<th colspan="2" class="clockpicker" data-placement="bottom" data-align="top" data-autoclose="true">
-		{{ form.start_time|as_crispy_field }}</th>
-	<th class="clockpicker" data-placement="bottom" data-align="top" data-autoclose="true">
-		{{ form.stop_time|as_crispy_field }}</th>
-	<th>{{ form.language|as_crispy_field }}</th>
-	<th>{{ form.target_audience|as_crispy_field }}</th>
-	<th>{{ form.participants|as_crispy_field }}</th>
-</tr>
-</table>
-<input type="submit" style="display: none;" />
-</form>
-
-<div class="row justify-content-between">
-	<div class="col-2">
-		<a role="button" id="bt_back" class="btn btn-primary" href="{% url 'app:view_excursions' %}"
-			style="float: left;">GO BACK</a>
+	<div class="row justify-content-between">
+		<div class="col-2">
+			<a role="button" id="bt_back" class="btn btn-primary" href="{% url 'app:view_excursions' %}"
+				style="float: left;">GO BACK</a>
+		</div>
+		<div id="additional_buttons" class="col-2">
+		</div>
 	</div>
-	<div id="additional_buttons" class="col-2">
-	</div>
-</div>
 </div>
 
 <!-- MODAL FOR CHANGING EXCURSION DATA -->
@@ -218,45 +230,43 @@
 		{% endif %}
 
 		{% if is_user_organizator == False and is_user_guide == False and is_user_incharge == False %}
-		$('#confirm_held_info').hide();
-		$('#changefield_info').hide();
-		$("#myForm :input").prop('readonly', true);
-		$('#id_guide').attr('disabled', true);
-		$('#id_facility').attr('disabled', true);
+			$('#confirm_held_info').hide();
+			$('#changefield_info').hide();
+			$("#myForm :input").prop('readonly', true);
+			$('#id_guide').attr('disabled', true);
+			$('#id_facility').attr('disabled', true);
 		{% endif %}
 
 		{% if excursion.confirmed_by_guide == False and excursion.confirmed_by_incharge == False %}
-		$('#confirm_held_info').text("This excursion is not confirmed by guide and incharge.");
-		$('#confirm_held_info').addClass("text-danger");
+			$('#confirm_held_info').text("This excursion is not confirmed by guide and incharge.");
+			$('#confirm_held_info').addClass("text-danger");
 		{% else %}
-		{% if excursion.confirmed_by_guide == True and excursion.confirmed_by_incharge == True %}
-		$('#confirm_held_info').text("This excursion is confirmed by guide and incharge.");
-		$('#confirm_held_info').addClass("text-success");
-		{% else %}
-		$('#confirm_held_info').text("This excursion is not confirmed by guide or incharge.");
-		$('#confirm_held_info').addClass("text-danger");
-		{% endif %}
+			{% if excursion.confirmed_by_guide == True and excursion.confirmed_by_incharge == True %}
+				$('#confirm_held_info').text("This excursion is confirmed by guide and incharge.");
+				$('#confirm_held_info').addClass("text-success");
+			{% else %}
+				$('#confirm_held_info').text("This excursion is not confirmed by guide or incharge.");
+				$('#confirm_held_info').addClass("text-danger");
+			{% endif %}
 		{% endif %}
 
-		{% comment %}
 		{% if excursion.not_held == False %}
-		console.log('{{ current_date }}')
-		console.log('{{ excursion.date|date:"Y-m-d" }}')
-		{% if current_date <= excursion.date | date: "Y-m-d" %}
-		$('#confirm_held_info').append("<br><br><span style=\"color: gray;\">This excursion will be held.</span>");
+			console.log('{{ current_date }}')
+			console.log('{{ excursion.date|date:"Y-m-d" }}')
+			{% if current_date <= excursion.date|date:"Y-m-d" %}
+				$('#confirm_held_info').append("<br><br><span style=\"color: gray;\">This excursion will be held.</span>");
+			{% else %}
+				{% if current_date >= excursion.date|date:"Y-m-d" and current_time >= excursion.start_time|time:"H:i" %}
+					$('#confirm_held_info').append("<br><br><span style=\"color: #28a745;\">This excursion has been held.</span><a id=\"bt_not_held\" class=\"btn btn-danger\" style=\"margin-left: auto;\" href=\"mark_as_not_held\" onclick=\"this.style.display=\'none\'; location.reload(); return true;\" data-toggle=\"tooltip\" data-placement=\"top\" title=\"Click to mark the excursion as untried\">MARK AS NOT HELD</a>");
+					$('#bt_change').attr('disabled', true);
+					$("#myForm :input").prop('readonly', true);
+					$('#id_guide').attr('disabled', true);
+					$('#id_facility').attr('disabled', true);
+				{% endif %}
+			{% endif %}
 		{% else %}
-		{% if current_date >= excursion.date | date: "Y-m-d" and current_time >= excursion.start_time | time: "H:i" %}
-		$('#confirm_held_info').append("<br><br><span>This excursion has been held.</span><a id=\"bt_not_held\" class=\"btn btn-danger\" style=\"margin-left: auto;\" href=\"mark_as_not_held\" onclick=\"this.style.display=\'none\'; location.reload(); return true;\" data-toggle=\"tooltip\" data-placement=\"top\" title=\"Click to mark the excursion as untried\">NOT HELD</a>");
-		$('#bt_change').attr('disabled', true);
-		$("#myForm :input").prop('readonly', true);
-		$('#id_guide').attr('disabled', true);
-		$('#id_facility').attr('disabled', true);
+			$('#confirm_held_info').append("<br><br><span style=\"color: #dc3545;\">This excursion has not been held.</span>");
 		{% endif %}
-		{% endif %}
-		{% else %}
-		$('#confirm_held_info').append("<br><br><span style=\"color: #d9534f;\">This excursion has not been held.</span>");
-		{% endif %}
-		{% endcomment %}
 
 		
 		$.ajax({
