UPDATE: added ListView button

--- a/app/templates/calendar.html
+++ b/app/templates/calendar.html
@@ -76,13 +76,14 @@
                 header: {
                     left: 'prev,next today',
                     center: 'title',
-                    right: 'month,agendaWeek,agendaDay'
+                    right: 'month,agendaWeek,agendaDay,listWeek'
                 },
                 buttonText: {
                     today: 'today',
                     month: 'month',
                     week: 'week',
-                    day: 'day'
+                    day: 'day',
+                    listWeek: 'list'
                 },
                 nowIndicator: true,
                 // Default events from REST
