UPDATE: Chat and Base appearance, created Redirect to Calendar from root page

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -119,7 +119,7 @@
 <body class="skin-blue sidebar-mini" style="height: auto; min-height: 100%;">
     <div class="content-wrapper" style="height: auto; min-height: 100%;">
         <!-- Header Navbar -->
-        <nav class="navbar navbar-expand navbar-white navbar-light pushmenu pushmenu-left" role="navigation">
+        <!-- <nav class="navbar navbar-expand navbar-white navbar-light pushmenu pushmenu-left" role="navigation">
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link" data-widget="pushmenu" href="#"><i class="fas fa-bars"></i></a>
@@ -131,7 +131,7 @@
               <a href="#" class="nav-link">Contact</a>
             </li>
           </ul>
-        </nav>
+        </nav> -->
     
 
     <!-- Left side column. contains the logo and sidebar -->
