--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -1,38 +1,53 @@
 {% extends "base.html" %}
 {% block content %}
 
-<div class="card-body box-profile">
-	<h3 class="profile-username text-center">{{ user.get_full_name }}</h3>
-	<p class="text-muted text-center">@{{ user.get_username }}</p>
-	<ul class="list-group list-group-unbordered mb-3">
-		{% for dict in user_roles %}
-			{% for key, value in dict.items %}
-				{% if key == 'role' %}
-					<li class="list-group-item" style="padding: 1%;">
-						<b>{{ value }}</b>
-						{% if value == 'Guide' or value == 'Organizator' %}
-							<a class="float-right">
-								{% for value in dict.excursions %}
-									<p>
-									{{ value.facility }},
-									{{ value.event }},
-									{{ value.date }}</p>
-								{% endfor %}
-							</a>
+<section class="content-header">
+	<h4></h4>
+</section>
+
+<section class="col-lg-12 col-xs-12 connectedSortable ui-sortable">
+    <!-- Custom tabs (Charts with tabs)-->
+    <div class="card">
+        <div class="card-header ui-sortable-handle">
+            <h3 class="card-title">
+              <i class="fas fa-user mr-1"></i>
+              My Profile
+            </h3>
+        </div><!-- /.card-header -->
+        <div class="card-body box-profile">
+			<h3 class="profile-username text-center">{{ user.get_full_name }}</h3>
+			<p class="text-muted text-center">@{{ user.get_username }}</p>
+			<ul class="list-group list-group-unbordered mb-3">
+				{% for dict in user_roles %}
+					{% for key, value in dict.items %}
+						{% if key == 'role' %}
+							<li class="list-group-item" style="padding: 1%;">
+								<b>{{ value }}</b>
+								{% if value == 'Guide' or value == 'Organizator' %}
+									<a class="float-right">
+										{% for value in dict.excursions %}
+											<p>
+											{{ value.facility }},
+											{{ value.event }},
+											{{ value.date }}</p>
+										{% endfor %}
+									</a>
+								{% endif %}
+								{% if value == 'Incharge' %}
+									<a class="float-right">
+										{% for value in dict.excursions %}
+											<p>
+												{{ value.facility }}
+											</p>
+										{% endfor %}
+									</a>
+								{% endif %}
+							</li>
 						{% endif %}
-						{% if value == 'Incharge' %}
-							<a class="float-right">
-								{% for value in dict.excursions %}
-									<p>
-										{{ value.facility }}
-									</p>
-								{% endfor %}
-							</a>
-						{% endif %}
-					</li>
-				{% endif %}
-			{% endfor %}
-		{% endfor %}
-	</ul>
-</div>
+					{% endfor %}
+				{% endfor %}
+			</ul>
+		</div>
+	</div>
+</section>
 {% endblock %}
