UPDATE: added Contacts page

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -177,6 +177,7 @@
                 </ul>
               </li>
                 <li class="header">ACTIONS</li>
+                <li><a href="{% url 'app:view_contacts' %}"><i class="fa fa-info-circle"></i> <span>Contacts</span></a></li>
                 <li><a href="{% url 'logout'%}?next={{ request.path }}"><i class="fa fa-sign-out-alt"></i> <span>Logout</span></a></li>
             </ul>
           </nav>
