--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -52,6 +52,15 @@
               box-shadow: 0 0 1px 0 rgba(255,0,0, 0);
           }
         }
+        .noselect {
+          -webkit-touch-callout: none; /* iOS Safari */
+            -webkit-user-select: none; /* Safari */
+            -khtml-user-select: none; /* Konqueror HTML */
+              -moz-user-select: none; /* Firefox */
+                -ms-user-select: none; /* Internet Explorer/Edge */
+                    user-select: none; /* Non-prefixed version, currently
+                                          supported by Chrome and Opera */
+        }
     </style>
     <style>
       @media screen and (max-width:600px) /*for small screen like mobile*/
@@ -138,11 +147,11 @@
       <aside class="main-sidebar sidebar-dark-primary" style="padding: 0;">
         <!-- Logo -->
         <a href="/" class="brand-link">
-          <img src="{% static 'img/jinr.png' %}" class="brand-image img-circle elevation-3" style="opacity: .8">
-          <span class="brand-text font-weight-light"><b>JINR</b>ex</span>
+          <img src="{% static 'img/jinr.png' %}"  style="vertical-align: middle; opacity: .8">
+          <span style="display: inline-block; vertical-align: middle;"><strong>JINR</strong>ex</span>
           <br><badge class="text-muted text-wrap" style="font-size: small;">
             System of organization and accounting of excursions in <b>JINR</b>
-        </badge>
+          </badge>
         </a>
         <section class="sidebar">
         <!-- Sidebar user panel (optional) -->
