--- a/app/templates/excursion_info.html
+++ b/app/templates/excursion_info.html
@@ -8,8 +8,8 @@
 {% now "H:i" as current_time %}
 
 <section class="content-header">
-	<h4></h4>
-</section><br>
+  <h4></h4>
+</section>
 
 <section class="col-lg-12 col-xs-12 connectedSortable ui-sortable">
     <!-- Custom tabs (Charts with tabs)-->
@@ -213,28 +213,27 @@
 
 		$('#id_message').addClass('form-control');
 
-		{% if is_user_guide == True or is_user_incharge == True %}
+		{% if is_user_guide or is_user_incharge %}
 		{
-			{% if is_user_guide == True %}
+			{% if is_user_guide %}
 				console.log('User is Guide')
 				{% if excursion.confirmed_by_guide == False %}
 					$('#additional_buttons').append(
-						'<a id="bt_confirm" class="btn btn-warning" style="margin-left: auto;" href="change_confirmed/" onclick="this.style.display=\'none\'; location.reload(); return true;">CONFIRM EXCURSION</a>'
+						'<a id="bt_confirm" class="btn btn-warning" style="margin-left: auto;" href="change_confirmed_by_guide/" onclick="this.style.display=\'none\'; location.reload(); return true;">CONFIRM EXCURSION</a>'
 					);
 				{% else %}
-					$('#myForm').append("<h4><span class=\"badge badge-warning\">You have already confirmed this excursion</span></h4>");
+					$('#myForm').append("<h4><span class='badge' style='color: #2196F3; border: 1px solid #2196F3; background-color: transparent;'>You have already confirmed this excursion (Guide)</span></h4>");
 				{% endif %}
-			{% else %}
-			{% if is_user_incharge == True %}
+			{% endif %}
+			{% if is_user_incharge %}
 				console.log('User is Incharge')
 				{% if excursion.confirmed_by_incharge == False %}
 					$('#additional_buttons').append(
-						'<a id="bt_confirm" class="btn btn-warning" style="margin-left: auto;" href="change_confirmed/" onclick="this.style.display=\'none\'; location.reload(); return true;">CONFIRM EXCURSION</a>'
+						'<a id="bt_confirm" class="btn btn-warning" style="margin-left: auto;" href="change_confirmed_by_incharge/" onclick="this.style.display=\'none\'; location.reload(); return true;">CONFIRM EXCURSION</a>'
 					)
 				{% else %}
-					$('#myForm').append("<h4><span class=\"badge badge-warning\">You have already confirmed this excursion</span></h4>");
+					$('#myForm').append("<h4><span class='badge' style='color: #2196F3; border: 1px solid #2196F3; background-color: transparent;'>You have already confirmed this excursion (Incharge)</span></h4>");
 				{% endif %}
-			{% endif %}
 			{% endif %}
 
 			$('#confirm_held_info').show();
@@ -245,7 +244,7 @@
 		}
 		{% endif %}
 
-		{% if is_user_organizator == True %}
+		{% if is_user_organizator %}
 		{
 			$('#confirm_held_info').show();
 			$('#changefield_info').show();
@@ -271,7 +270,7 @@
 			$('#confirm_held_info').text("This excursion is not confirmed by guide and incharge.");
 			$('#confirm_held_info').addClass("text-danger");
 		{% else %}
-			{% if excursion.confirmed_by_guide == True and excursion.confirmed_by_incharge == True %}
+			{% if excursion.confirmed_by_guide and excursion.confirmed_by_incharge %}
 				$('#confirm_held_info').text("This excursion is confirmed by guide and incharge.");
 				$('#confirm_held_info').addClass("text-success");
 			{% else %}
