UPDATE: listWeek in Calendar (instead of listMonth), fixed logo in navbar

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -147,7 +147,7 @@
       <aside class="main-sidebar sidebar-dark-primary" style="padding: 0;">
         <!-- Logo -->
         <a href="/" class="brand-link">
-          <img src="{% static 'img/jinr.png' %}"  style="vertical-align: middle; opacity: .8">
+          <img src="{% static 'img/jinr.png' %}" height=66" width="100" style="vertical-align: middle; opacity: .8">
           <span style="display: inline-block; vertical-align: middle;"><strong>JINR</strong>ex</span>
           <br><badge class="text-muted text-wrap" style="font-size: small;">
             System of organization and accounting of excursions in <b>JINR</b>
