--- a/app/templates/calendar.html
+++ b/app/templates/calendar.html
@@ -151,7 +151,7 @@ $(document).ready(function () {
             header: {
                 left: 'prev,next today',
                 center: 'title',
-                right: 'month,agendaWeek,agendaDay,listMonth'
+                right: 'month,agendaWeek,agendaDay,listWeek'
             },
             {% comment %} theme: true, {% endcomment %}
             {% comment %} themeSystem:'bootstrap4', {% endcomment %}
@@ -161,7 +161,7 @@ $(document).ready(function () {
                 month: 'month',
                 week: 'week',
                 day: 'day',
-                listMonth: 'list'
+                listWeek: 'list'
             },
             nowIndicator: true,
             events:  events,
